# ChangeLog for net-misc/curl
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/curl/ChangeLog,v 1.151 2009/11/05 04:39:55 dragonheart Exp $

*curl-7.19.7 (05 Nov 2009)

  05 Nov 2009; Daniel Black <dragonheart@gentoo.org> +curl-7.19.7.ebuild,
  +files/curl-7.19.7-test241.patch, metadata.xml:
  version bump as per bug #291469 thanks Gabriel

  13 Sep 2009; Brent Baude <ranger@gentoo.org> curl-7.19.6.ebuild:
  Marking curl-7.19.6 ppc64 for bug 281515

  27 Aug 2009; Steve Dibb <beandog@gentoo.org> curl-7.19.6.ebuild:
  amd64 stable, bug 281515

  26 Aug 2009; Raúl Porcel <armin76@gentoo.org> curl-7.19.6.ebuild:
  arm/ia64/s390/sh/sparc stable wrt #281515

  25 Aug 2009; Tobias Klausmann <klausman@gentoo.org> curl-7.19.6.ebuild:
  Stable on alpha, bug #281515

  25 Aug 2009; Christian Faulhammer <fauli@gentoo.org> curl-7.19.6.ebuild:
  stable x86, security bug 281515

  23 Aug 2009; nixnut <nixnut@gentoo.org> curl-7.19.6.ebuild:
  ppc stable #281515

  20 Aug 2009; Jeroen Roovers <jer@gentoo.org> curl-7.19.6.ebuild:
  Stable for HPPA (bug #281950).

*curl-7.19.6 (19 Aug 2009)

  19 Aug 2009; Alex Legler <a3li@gentoo.org> +curl-7.19.6.ebuild:
  Non-maintaner commit: Version bump for security bug 281515. Tests run fine
  on ~amd64 and git and claws-mail-rssyl build fine against it.

  08 Mar 2009; Daniel Black <dragonheart@gentoo.org>
  -files/curl-7.15.1-test62.patch, -files/curl-7.15-strip-ldflags.patch,
  -files/curl-7.16.2-strip-ldflags.patch,
  -files/curl-7.17.1-null-handler-segfault.patch,
  -files/curl-7.18.2-nss-threadsafe.patch, -files/libcurl-gnutlscert.patch,
  -curl-7.16.4.ebuild, -curl-7.17.1.ebuild, -curl-7.18.2.ebuild,
  -curl-7.19.2.ebuild, -curl-7.19.3.ebuild:
  cleanup

  04 Mar 2009; Tobias Scherbaum <dertobi123@gentoo.org> curl-7.19.4.ebuild:
  ppc stable, bug #260361

  04 Mar 2009; Brent Baude <ranger@gentoo.org> curl-7.19.4.ebuild:
  Marking curl-7.19.4 ppc64 for bug 260361
