@@ -8,11 +8,9 @@ AUX curl-7.18.2-prefix.patch 662 RMD160 a5cf90f3b93acd610adf116d00383ec8f792105e
 AUX curl-7.19.7-interix.patch 864 RMD160 b545085fab28b7a977b3b528a81f8bf90543039a SHA1 862205379c560d074c9fe1c636ff2dce091694c3 SHA256 4af46c45c216877fc6dd05b1c76deade56d1bf6199680bee2b0b3a27a8775982
 AUX curl-7.19.7-test241.patch 483 RMD160 3b9262cbde57b12ca89dcc358fa1be2a1cc6c477 SHA1 63739ae2625d1d858676fc7638322d3c677be2b8 SHA256 e06c33750b5337b2700445a073b96d0ab817584fffbf24ac386668cd5e98d450
 AUX libcurl-gnutlscert.patch 1498 RMD160 286859e0870c6e5aa21047b28b2c256f7b7bfffe SHA1 6ef8e0887431e62328cc020cad5fb10673336ad3 SHA256 4b0a9db99ddc698c39484a95cba1f52c0dc17ed34f2d7e1dd780f925bf21761b
-DIST curl-7.19.4.tar.bz2 2296879 RMD160 91f46c421e0f23f268640d39f45a74621e951245 SHA1 6b8cb206990cd68d8653cea16a47bd0febd5c50d SHA256 fb3436280dedbc8f8141d3841a5964c4491dd6457bc5b7123854aed0b794be86
-DIST curl-7.19.6.tar.bz2 2347791 RMD160 7627d78ec681a513972be0cb5473b26805f44d83 SHA1 b7cb98c7a6577de7073d0b0c23eecdb8ed993e8e SHA256 ea88f48c8415f7d3af482e4d241277b2bdbfaffaf285e8001c88c1376cbc1021
 DIST curl-7.19.7.tar.bz2 2355121 RMD160 b170b24af3a6d3fc3357e90fc7ae5ef34d722fb4 SHA1 c306ebf0f65fb90df3c9c9a12fb04fb77cc29e2c SHA256 1a15f94ae3401e3bd6208ce64155c2577815019824bceae7fd3221a12bc54a70
-EBUILD curl-7.19.4.ebuild 3643 RMD160 04754ad5fd92cfcfbbbaf4919ddf59e95b67ad43 SHA1 05b4eaa2ecc466603df146d6d6c132eb2aa7eafe SHA256 bf346c6334919ad259734fc2de4adc8a3bd1938c868eee92193e2e97275383a9
-EBUILD curl-7.19.6.ebuild 3661 RMD160 4e266a9790e14c5eec465794b63c1f3b105347a1 SHA1 0b5ec46455021f11057dd9f0dd6d2554ed4961d0 SHA256 45672d9e6f0c820d5915297806ff820fdda28d5da7787881e26fb9cfc236387b
-EBUILD curl-7.19.7.ebuild 3287 RMD160 f8164ba35c2389aa1fa4271a0535f471795491c1 SHA1 33b4bd758fb90dd2b1722aff742c5dbb6a684d5e SHA256 0d1d145874c58e8e4d461ed89e993110943f9fc3e92c6df13bdd2f87f0afdfec
-MISC ChangeLog 25785 RMD160 5ba25e56e44e864747b3824dac3799561c3fb8ca SHA1 d380ae520b9ef8afc1c15ed1b331597a2cbe9482 SHA256 79c4d3ee32c78ef12f156ebc3d637b6760a37f67b0237b2d00d0b2a1f7738da2
+DIST curl-7.20.0.tar.bz2 2088522 RMD160 9418ab686551af58df84960277868c77836d6817 SHA1 89215fc4c4cd1e42134d6117255c401372e628de SHA256 eb516915da615d8f6b2b855004d5d4b19c468f080e3736d7a73c5599b9acab11
+EBUILD curl-7.19.7.ebuild 3279 RMD160 0f51ba0798f996cd58490d69c6269730672908a1 SHA1 996245541687d5db7c34ef8e32882548c6988314 SHA256 169378a9d3ad3768ba67a0551fab37780dac26307156b08da2d1435d48470aa1
+EBUILD curl-7.20.0.ebuild 3347 RMD160 2e38a8fdc4db1a10c3996bf651c6aa336d13f3e1 SHA1 4cb239a8b43d29dcb6fcd2ca3a5b7c49bd0da691 SHA256 51b51b0ba5e0bbd22ed1d759ac9b7abeba728cdf6f4ffabca102653fa9da0408
+MISC ChangeLog 26130 RMD160 fd022437306ad82d5226c2e945c9621c18d7be4c SHA1 84e2541b8273a25b188ce88e40879112cca621b5 SHA256 9f6bdd1479c073b2dcb8bab12a24006048be976d5e5023aaeb89ff6345aed27f
 MISC metadata.xml 564 RMD160 fbc71d245e583491775c6c934312e428539a5596 SHA1 b752c747556474e320c0361136580f3975924326 SHA256 66e6a91e67ff9bc0669b755e0a5d1256e69a4389eef6593b9cdd9aa3a406e3f4
